# validus

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  rustfmt.toml
_docs/: architecture.md  brief.md  scenarios.md  trade_actions.md  trade_model.md  trade_states.md
config/: app.toml
crates/: readme.md
crates/app_core/: Cargo.toml  readme.md
crates/app_core/src/: colors.rs  config.md  config.rs  console.rs  context.md  context.rs  errors.md  errors.rs  lib.rs  logger.rs  macros.rs  prelude.rs  utils.rs
crates/app_core/tests/: config_test.rs  console_test.rs  logger_test.rs
crates/openapi/: Cargo.toml  README.md
crates/openapi/src/: lib.rs  models.rs  types.rs
crates/openapi/src/server/: mod.rs
crates/trade_core/: Cargo.toml  readme.md
crates/trade_core/src/: engine.rs  errors.rs  lib.rs  prelude.rs  readme.md  snowflake.rs  state.rs  store.rs  util.rs
crates/trade_core/src/model/: currency.rs  direction.rs  mod.rs  trade.rs  trade_action.rs  trade_details.rs  trade_state.rs
openapi/: _readme.md  install-openapi-gen.sh  rest.yaml
src/: app_config.rs  app_entry.rs  app_errors.rs  main.rs
src/api/: mod.rs
src/api/fix/: for_example.txt
src/api/grpc/: for_example.txt  launch.rs  mod.rs  readme.md
src/api/rest/: errors.rs  impls.rs  launch.rs  mod.rs  router.rs  validator.rs
src/service/: mapper.rs  mod.rs  trading_service.rs  trading_utils.rs
src/services/: mod.rs  trading_svc.rs
src/state/: mod.rs  trading_state.rs
