[workspace]
resolver = "2"
members = [
    "crates/app_core",
    "crates/trade_core",
    "."
]

# Shared dependencies (optional)
[workspace.dependencies]
env_logger = "0.11.8"      # Added to workspace

[package]
name = "validus_trade"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates:
app_core = { path = "crates/app_core" }
trade_core = { path = "crates/trade_core" }

# Shared external dependencies:
env_logger.workspace = true
serde_json = "1.0.140"

serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
once_cell = "1.21.3"
prettytable = "0.10"
chrono = "0.4.40"
