[workspace]
resolver = "2"
members = [
    "crates/app_core",
    "crates/trade_core",
    "crates/openapi",
    "."
]

# Shared dependencies (optional)
[workspace.dependencies]
#env_logger = "0.11.8"      # Added to workspace

[package]
name = "validus_trade"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates:
app_core = { path = "crates/app_core" }
trade_core = { path = "crates/trade_core" }
openapi = { path = "crates/openapi" }

once_cell = "1.21.3"
chrono = { version = "0.4.4", features = ["serde"] }  # For date/time fields
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
prettytable = "0.10"

# For Public API (REST
tokio = { version = "1", features = ["full"] }

# Axum + oapi integration
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
async-trait = "0.1"
http = "1.0"
serde_json = "1.0.140"

# To support stand-alone binary on Alpine container
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
