[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
once_cell = "1.21.3"
lazy_static = "1.5.0"
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
ctrlc = "3.4"

#dyn-clone = "1.0"
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["time", "json", "env-filter"] }
#tracing-appender = "0.2"
#env_logger.workspace = true
#libc = "0.2.171"
#log.workspace = true

[dev-dependencies]
tempfile = "3.19.1"

