[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
once_cell = "1.21.3"
lazy_static = "1.5.0"
chrono = "0.4.40"
serde = "1.0.219"
serde_json = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.19.1"

[features]
test-utils = [] # For integration tests
