[package]
name = "trade_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
strum = "0.27.1"
strum_macros = "0.27.1"
parking_lot = "0.12" # For snowflake

app_core = { path = "../app_core"}
serde_json = "1.0.140"

